--- a/module5-6/assets/index.css
+++ b/module5-6/assets/index.css
@@ -216,12 +216,23 @@ section {
     background: #fff;
     padding: 80px 0;
 }
+#contact {
+    background: #e6e6e6;
+    padding: 80px 0;
+    color: #333;
+    text-align: center;
+}
+
 
 #about .about-container .background {
     height: 50vh;
     background: url(../assets/images/who.jpg) center top no-repeat;
     background-size:contain;
     margin-bottom: 10px;
+}
+
+.form-group{
+    margin: 5px;
 }
 
 #about .about-container .background2 {
@@ -251,7 +262,7 @@ section {
 
 
 #team {
-    background: #fff;
+    background: #e6e6e6;
     padding: 80px 0 60px 0;
 }
 
@@ -260,20 +271,14 @@ section {
     margin-bottom: 20px;
 }
 
-#team .member .pic {
+#team .member .pic img {
+    max-width: 100%;
     margin-bottom: 15px;
     height: 260px;
     width:  260px;
     border-radius: 100%;
     overflow: hidden;
-}
-
-#team .member .pic img {
-    max-width: 100%;
-    width: 100%;
-    height: 100%;
     object-fit: cover;
-
 
 }
 
@@ -295,7 +300,7 @@ section {
 
 
 #services {
-    background: #e6e6e6;
+    background: #fff;
     background-size: cover;
     padding: 80px 0 60px 0;
     color: #ffffff;
@@ -334,30 +339,31 @@ section {
     font-size: 14px;
     line-height: 24px;
 }
-#reserve button[type="reserve"] {
+#services button[type="reserve"] {
     background: #009245;
     border: 0;
     padding: 10px 24px;
     color: #fff;
-
+    border-radius: 5%;
 }
 
-#reserve button[type="reserve"]:hover {
+#services button[type="reserve"]:hover {
     background: #026430;
 }
 
-#reserve {
-    background: #e6e6e6;
-    background-size: cover;
-    padding: 80px 0 60px 0;
-    color: #3a3a3a;
-}
-
 #footer {
+    
     background: #343b40;
     padding: 30px 0;
     color: #fff;
     font-size: 14px;
 }
 
+.modal {
+    color: #111;
+}
 
+.modal #star{
+    color: #0d6fb8;
+
+}
